[package]
name = "rust_learning_group"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "cargo_install"

[[bin]]
name = "hello_world"

[[bin]]
name = "basic_input"

[[bin]]
name = "guess_number"