[package]
name = "rust_learning_group"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
tokio = { version = "1.36.0", features = ["full"] }


[[bin]]
name = "datagen_data_types"
path = "src/helpers/datagen_data_types.rs"

[[bin]]
name = "datagen_data_types_2"
path = "src/helpers/datagen_data_types_2.rs"

[[bin]]
name = "datagen_control_flow_3"
path = "src/helpers/datagen_control_flow_3.rs"
